<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintScrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondFragment">

    <!-- bottom menu -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:fitsSystemWindows="true">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="30dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_square"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:itemHorizontalTranslationEnabled="false"
                app:itemIconTint="@color/bottom_nav_item_selector"
                app:itemTextColor="@color/bottom_nav_item_selector"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fab_first"
            android:scaleType="center"

            android:theme="@style/Theme.MaterialComponents.Light"
            android:tint="@color/white"
            app:borderWidth="0dp"
            app:fabCustomSize="64dp"
            app:layout_anchor="@id/bottom_bar"
            app:layout_anchorGravity="center"
            app:maxImageSize="24dp"
            app:srcCompat="@drawable/ic_return"
            app:tint="@color/primary" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- scroll view -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:background="@color/primary"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/my_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/monthly_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-215dp"
                android:fontFamily="monospace"
                android:text="@string/f2_emi"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/payment_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-150dp"
                android:fontFamily="monospace"
                android:text="@string/f2_desc"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/background"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/primary_light"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/f2_h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/f2_h1"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:translationZ="90dp"
                app:layout_constraintStart_toStartOf="@+id/background"
                app:layout_constraintTop_toTopOf="@+id/background" />

            <TextView
                android:id="@+id/f2_h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="monospace"
                android:text="@string/f2_h2"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:translationZ="90dp"
                app:layout_constraintBottom_toBottomOf="@+id/background"
                app:layout_constraintStart_toStartOf="@+id/background" />

            <TextView
                android:id="@+id/f2_h1_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="monospace"
                android:text="@string/f2_emi"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:translationZ="90dp"
                app:layout_constraintEnd_toEndOf="@+id/background"
                app:layout_constraintTop_toTopOf="@+id/background" />

            <TextView
                android:id="@+id/f2_h2_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="monospace"
                android:text="@string/f2_emi"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:translationZ="90dp"
                app:layout_constraintBottom_toBottomOf="@+id/background"
                app:layout_constraintEnd_toEndOf="@+id/background" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>