<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- bottom menu -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="30dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_square"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:itemHorizontalTranslationEnabled="false"
                app:itemIconTint="@color/grey"
                app:itemTextColor="@color/bottom_nav_item_selector"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="30dp"
            android:clickable="false"
            android:contentDescription="@string/fab_first"
            android:scaleType="center"
            android:src="@drawable/transparent_square"
            android:theme="@style/Theme.MaterialComponents.Light"

            app:backgroundTint="@color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:fabCustomSize="64dp"
            app:layout_anchor="@id/bottom_bar"
            app:layout_anchorGravity="center"
            app:maxImageSize="24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- scroll view -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_background"
                android:layout_width="350dp"
                android:layout_height="550dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="monospace"
                android:justificationMode="inter_word"
                android:text="@string/f3_desc"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/intent_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="487dp"
                android:text="@string/f3_button"
                app:backgroundTint="@color/primary"
                app:layout_constraintEnd_toEndOf="@+id/textview_background"
                app:layout_constraintStart_toStartOf="@+id/textview_background"
                app:layout_constraintTop_toTopOf="@+id/textview_background" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>